--- a/Carl.html
+++ b/Carl.html
@@ -20,7 +20,7 @@
 
 <div class="wassup">
 <div class="card" style="width: 40rem;">
-    <img src="../Ice Age 6.png" class="card-img-top" alt="Sid">
+    <img src="Fonts/Ice Age 6.png" class="card-img-top" alt="Sid">
 
     <div class="card-body">
       <h5 class="card-title">Carl</h5>
