--- a/Ice Age Tiere.html
+++ b/Ice Age Tiere.html
@@ -59,7 +59,7 @@
     <div class="row row-cols-4">
       <div class="col">
         <div class="card" style="width: 18rem;">
-            <img src="../Ice Age 1.jpeg" class="card-img-top" alt="...">
+            <img src="Fonts/Ice Age 1.jpeg" class="card-img-top" alt="...">
             <div class="card-body">
               <a class="btn btn-outline-primary" href="Sid.html" role="button">Sid</a>
               <p class="card-text">A clumsy but good-natured sloth. Sid is often the comic relief, known for his childish antics and unfortunate situations.</p>
@@ -68,21 +68,21 @@
         </div>
       <div class="col">
         <div class="card" style="width: 18rem;">
-          <img src="../Ice Age 2.png" class="card-img-top" alt="...">
+          <img src="Fonts/Ice Age 2.png" class="card-img-top" alt="...">
           <div class="card-body">
             <a class="btn btn-outline-primary" href="Manfred.html" role="button">Manfred</a>
             <p class="card-text"> A woolly mammoth known for his grumpy and sarcastic personality. Despite his gruff exterior, he's loving, courageous, and protective of his herd.</p>
           </div>
         </div></div>
       <div class="col"> <div class="card" style="width: 18rem;">
-        <img src="../Ice Age 3.jpg" class="card-img-top" alt="..." width="500px" height="275px">
+        <img src="Fonts/Ice Age 3.jpg" class="card-img-top" alt="..." width="500px" height="275px">
         <div class="card-body">
           <a class="btn btn-outline-primary" href="Scrat.html" role="button">Scrat</a>
           <p class="card-text">A frantic acorn-obsessed saber-toothed squirrel whose persistent pursuit of his acorn has comical yet often world-altering consequences.</p>
         </div>
       </div></div>
       <div class="col"><div class="card" style="width: 18rem;">
-        <img src="../Ice Age 4.jpg" class="card-img-top" alt="..." height="275px">
+        <img src="Fonts/Ice Age 4.jpg" class="card-img-top" alt="..." height="275px">
         <div class="card-body">
           <a class="btn btn-outline-primary" href="Diego.html" role="button">Diego</a>
           <p class="card-text">A cunning and agile smilodon (saber-toothed tiger) who initially joins the herd with ulterior motives but eventually becomes a loyal friend.</p>
@@ -99,7 +99,7 @@
     <div class="row row-cols-4">
       <div class="col">
         <div class="card" style="width: 18rem;">
-            <img src="../Ice Age 6.png" class="card-img-top" alt="...">
+            <img src="Fonts/Ice Age 6.png" class="card-img-top" alt="...">
             <div class="card-body">
               <a class="btn btn-outline-primary" href="Carl.html" role="button">Carl</a>
               <p class="card-text">A grumpy but resourceful groundsloth who often appears alongside Sid, frequently bickering with him. </p>
@@ -109,21 +109,21 @@
         </div>
       <div class="col">
         <div class="card" style="width: 18rem;">
-          <img src="../Ice Age 7.jpg" class="card-img-top" alt="..." height="275px">
+          <img src="Fonts/Ice Age 7.jpg" class="card-img-top" alt="..." height="275px">
           <div class="card-body">
             <a class="btn btn-outline-primary" href="Dodo.html" role="button">Dodo</a>
             <p class="card-text"> Dodo birds are extinct flightless birds that appear very rarely in the Ice Age, mostly as background characters</p>
           </div>
         </div></div>
       <div class="col"> <div class="card" style="width: 18rem;">
-        <img src="../Ice Age 8.png" class="card-img-top" alt="..." width="500px" height="275px">
+        <img src="Fonts/Ice Age 8.png" class="card-img-top" alt="..." width="500px" height="275px">
         <div class="card-body">
           <a class="btn btn-outline-primary" href="Zeke.html" role="button">Zeke</a>
           <p class="card-text">This possum is also not a major characters but appear occasionally, often causing trouble for Sid</p>
         </div>
       </div></div>
       <div class="col"><div class="card" style="width: 18rem;">
-        <img src="../Ice Age 9.png" class="card-img-top" alt="..." height="275px">
+        <img src="Fonts/Ice Age 9.png" class="card-img-top" alt="..." height="275px">
         <div class="card-body">
           <a class="btn btn-outline-primary" href="Brooke.html" role="button">Brooke</a>
           <p class="card-text">A British ground s loth. Quirky and awkward, but endearingly so. Makes a grand entrance on a crystal hoverboard. She's confident and proud of her unique background.</p>
@@ -139,7 +139,7 @@
     <div class="row row-cols-4">
       <div class="col">
         <div class="card" style="width: 18rem;">
-            <img src="../Ice Age 10.jpg" class="card-img-top" alt="...">
+            <img src="Fonts/Ice Age 10.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <a class="btn btn-outline-primary" href="Manny.html" role="button">Manny</a>
               <p class="card-text"> A woolly mammoth known for his grumpy and sarcastic personality. Despite his gruff exterior, he's loving, courageous, and protective of his herd.</p>
@@ -149,21 +149,21 @@
         </div>
       <div class="col">
         <div class="card" style="width: 18rem;">
-          <img src="../Ice Age 11.jpg" class="card-img-top" alt="...">
+          <img src="Fonts/Ice Age 11.jpg" class="card-img-top" alt="...">
           <div class="card-body">
             <a class="btn btn-outline-primary" href="Buck.html" role="button">Buck</a>
             <p class="card-text">A wild and eccentric weasel with a missing eye who becomes Manny's unlikely ally. He's a skilled dinosaur hunter and adept at surviving in harsh environments.</p>
           </div>
         </div></div>
       <div class="col"> <div class="card" style="width: 18rem;">
-        <img src="../Ice Age 12.webp" class="card-img-top" alt="..." width="500px" height="275px">
+        <img src="Fonts/Ice Age 12.webp" class="card-img-top" alt="..." width="500px" height="275px">
         <div class="card-body">
           <a class="btn btn-outline-primary" href="Start.html" role="button">Start</a>
           <p class="card-text">A hippopotamus encountered by Sid. While little is known about Start's personality or background, his presence alongside Sid adds a touch of the unexpected to the film.</p>
         </div>
       </div></div>
       <div class="col"><div class="card" style="width: 18rem;">
-        <img src="../Ice Age 13.webp" class="card-img-top" alt="..." height="275px">
+        <img src="Fonts/Ice Age 13.webp" class="card-img-top" alt="..." height="275px">
         <div class="card-body">
           <a class="btn btn-outline-primary" href="Glyptodon.html" role="button">Glyptodon</a>
           <p class="card-text">These massive creatures are walking tanks thanks to their thick bony plates, making them almost unstoppable predators. </p>
