--- a/Ice Age Shop.html
+++ b/Ice Age Shop.html
@@ -59,7 +59,7 @@
         <div class="row row-cols-4">
           <div class="col">
             <div class="card" style="width: 18rem;">
-                <img src="../SidPlushie.png" class="card-img-top" alt="..." height="270rem">
+                <img src="Fonts/SidPlushie.png" class="card-img-top" alt="..." height="270rem">
                 <div class="card-body">
                   <a class="btn btn-outline-primary" role="button">Sid Plushie</a>
                   <p class="card-text">CHF 50</p>
@@ -68,21 +68,21 @@
             </div>
           <div class="col">
             <div class="card" style="width: 18rem;">
-              <img src="../Ice Age Manfred.png" class="card-img-top" alt="..." height="270rem">
+              <img src="Fonts/Ice Age Manfred.png" class="card-img-top" alt="..." height="270rem">
               <div class="card-body">
                 <a class="btn btn-outline-primary"  role="button">Manfred Plushie</a>
                 <p class="card-text">CHF 17.99</p>
               </div>
             </div></div>
           <div class="col"> <div class="card" style="width: 18rem;">
-            <img src="../Ice Age Scrat.png" class="card-img-top" alt="..."  height="270rem">
+            <img src="Fonts/Ice Age Scrat.png" class="card-img-top" alt="..."  height="270rem">
             <div class="card-body">
               <a class="btn btn-outline-primary" role="button">Scrat Plushie</a>
               <p class="card-text">CHF 15.99</p>
             </div>
           </div></div>
           <div class="col"><div class="card" style="width: 18rem;">
-            <img src="../Ice Age Buck.jpg" class="card-img-top" alt="..." height="270rem">
+            <img src="Fonts/Ice Age Buck.jpg" class="card-img-top" alt="..." height="270rem">
             <div class="card-body">
               <a class="btn btn-outline-primary"  role="button">Diego Plushie</a>
               <p class="card-text">CHF 27.99</p>
