--- a/Ice Age Shop.html
+++ b/Ice Age Shop.html
@@ -1,15 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
     <meta charset="UTF-8" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-        crossorigin="anonymous"></script>   
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>   
     <link href="Ice Age.css" rel="stylesheet" />    
-
     <link rel="javascript" type="text/css" href="Ice Age.javascript.js" />
     <title>Shop</title>
 </head>
@@ -34,9 +30,6 @@
                     <ul><a class="btn btn-outline-success" href="Ice Age.html" role="button">Homepage</a></ul>
                     <br>
                     <ul><a class="btn btn-outline-success" href="Ice Age Kontakt.html" role="button">Kontakt</a></ul>
-
-                    
-
                 </h5>
                 <span class="text-muted">Toggleable via the navbar brand.</span>
             </div>
