--- a/Ice Age Tiere.html
+++ b/Ice Age Tiere.html
@@ -75,14 +75,14 @@
           </div>
         </div></div>
       <div class="col"> <div class="card" style="width: 18rem;">
-        <img src="Fonts/Ice Age 3.jpg" class="card-img-top" alt="..." width="500px" height="275px">
+        <img src="Fonts/Ice Age 3.jpg" class="card-img-top" alt="..." width="500rem" height="275rem">
         <div class="card-body">
           <a class="btn btn-outline-primary" href="Scrat.html" role="button">Scrat</a>
           <p class="card-text">A frantic acorn-obsessed saber-toothed squirrel whose persistent pursuit of his acorn has comical yet often world-altering consequences.</p>
         </div>
       </div></div>
       <div class="col"><div class="card" style="width: 18rem;">
-        <img src="Fonts/Ice Age 4.jpg" class="card-img-top" alt="..." height="275px">
+        <img src="Fonts/Ice Age 4.jpg" class="card-img-top" alt="..." height="275rem">
         <div class="card-body">
           <a class="btn btn-outline-primary" href="Diego.html" role="button">Diego</a>
           <p class="card-text">A cunning and agile smilodon (saber-toothed tiger) who initially joins the herd with ulterior motives but eventually becomes a loyal friend.</p>
@@ -109,21 +109,21 @@
         </div>
       <div class="col">
         <div class="card" style="width: 18rem;">
-          <img src="Fonts/Ice Age 7.jpg" class="card-img-top" alt="..." height="275px">
+          <img src="Fonts/Ice Age 7.jpg" class="card-img-top" alt="..." height="275rem">
           <div class="card-body">
             <a class="btn btn-outline-primary" href="Dodo.html" role="button">Dodo</a>
             <p class="card-text"> Dodo birds are extinct flightless birds that appear very rarely in the Ice Age, mostly as background characters</p>
           </div>
         </div></div>
       <div class="col"> <div class="card" style="width: 18rem;">
-        <img src="Fonts/Ice Age 8.png" class="card-img-top" alt="..." width="500px" height="275px">
+        <img src="Fonts/Ice Age 8.png" class="card-img-top" alt="..." width="500rem" height="275rem">
         <div class="card-body">
           <a class="btn btn-outline-primary" href="Zeke.html" role="button">Zeke</a>
           <p class="card-text">This possum is also not a major characters but appear occasionally, often causing trouble for Sid</p>
         </div>
       </div></div>
       <div class="col"><div class="card" style="width: 18rem;">
-        <img src="Fonts/Ice Age 9.png" class="card-img-top" alt="..." height="275px">
+        <img src="Fonts/Ice Age 9.png" class="card-img-top" alt="..." height="275rem">
         <div class="card-body">
           <a class="btn btn-outline-primary" href="Brooke.html" role="button">Brooke</a>
           <p class="card-text">A British ground s loth. Quirky and awkward, but endearingly so. Makes a grand entrance on a crystal hoverboard. She's confident and proud of her unique background.</p>
@@ -156,14 +156,14 @@
           </div>
         </div></div>
       <div class="col"> <div class="card" style="width: 18rem;">
-        <img src="Fonts/Ice Age 12.webp" class="card-img-top" alt="..." width="500px" height="275px">
+        <img src="Fonts/Ice Age 12.webp" class="card-img-top" alt="..." width="500rem" height="275rem">
         <div class="card-body">
           <a class="btn btn-outline-primary" href="Start.html" role="button">Start</a>
           <p class="card-text">A hippopotamus encountered by Sid. While little is known about Start's personality or background, his presence alongside Sid adds a touch of the unexpected to the film.</p>
         </div>
       </div></div>
       <div class="col"><div class="card" style="width: 18rem;">
-        <img src="Fonts/Ice Age 13.webp" class="card-img-top" alt="..." height="275px">
+        <img src="Fonts/Ice Age 13.webp" class="card-img-top" alt="..." height="275rem">
         <div class="card-body">
           <a class="btn btn-outline-primary" href="Glyptodon.html" role="button">Glyptodon</a>
           <p class="card-text">These massive creatures are walking tanks thanks to their thick bony plates, making them almost unstoppable predators. </p>
