--- a/Ice Age Kontakt.html
+++ b/Ice Age Kontakt.html
@@ -140,7 +140,7 @@
 
 
  <div class="card mb-3">
-  <img src="Fonts/Ice-Age-Movies1-658x658.png" class="card-img-top" alt="..." width="200rem" height="400rem">
+  <img src="Fonts/Ice-Age-Movies1-658x658.png" class="card-img-top" alt="..." width="200" height="400">
   <div class="card-body">
     <h5 class="card-title">Social Media/Newsletter</h5>
     <p class="card-text">
