--- a/Diego.html
+++ b/Diego.html
@@ -20,7 +20,7 @@
 
 <div class="wassup">
 <div class="card" style="width: 40rem;">
-    <img src="Fonts/Ice Age 4.jpg" class="card-img-top" alt="Sid">
+    <img src="Fonts/Ice Age 4.webp" class="card-img-top" alt="Sid">
 
     <div class="card-body">
       <h5 class="card-title">Diego</h5>
