--- a/Ice Age Kontakt.html
+++ b/Ice Age Kontakt.html
@@ -63,7 +63,7 @@
 
 
         <br>
-        <img src="Fonts/Ice_Age_Logo.png" class="rounded mx-auto d-block img"  height="150px" width="250px">    
+        <img src="Fonts/Ice_Age_Logo.webp" class="rounded mx-auto d-block img"  height="150px" width="250px">    
         <br>
         
                        
@@ -140,7 +140,7 @@
 
 
  <div class="card mb-3">
-  <img src="Fonts/Ice-Age-Movies1-658x658.png" class="card-img-top" alt="..." width="200" height="400">
+  <img src="Fonts/Ice-Age-Movies1-658x658.webp" class="card-img-top" alt="..." width="200" height="400">
   <div class="card-body">
     <h5 class="card-title">Social Media/Newsletter</h5>
     <p class="card-text">
