--- a/Manny.html
+++ b/Manny.html
@@ -20,7 +20,7 @@
 
 <div class="wassup">
 <div class="card" style="width: 40rem;">
-    <img src="Fonts/Ice Age 10.jpg" class="card-img-top" alt="Sid">
+    <img src="Fonts/Ice Age 10.webp" class="card-img-top" alt="Sid">
 
     <div class="card-body">
       <h5 class="card-title">Manny</h5>
