--- a/Sid.html
+++ b/Sid.html
@@ -20,7 +20,7 @@
 
 <div class="wassup">
 <div class="card" style="width: 40rem;">
-    <img src="Fonts/Ice Age 1.jpeg" class="card-img-top" alt="Sid">
+    <img src="Fonts/Ice Age 1.webp" class="card-img-top" alt="Sid">
 
     <div class="card-body">
       <h5 class="card-title">Sid</h5>
