--- a/Ice-Age.html
+++ b/Ice-Age.html
@@ -163,13 +163,13 @@
       <div class="carousel-inner">
         <div class="carousel-item active">
 
-          <img src="Fonts/412210.webp" class="d-block w-100" alt="a" width="1200rem" height="600rem">
+          <img src="Fonts/412210.webp" class="d-block" alt="a" width="1350" height="700rem">
         </div>
         <div class="carousel-item">
-          <img src="Fonts/R.webp" class="d-block w-100" alt="a" width="1200rem" height="600rem">
+          <img src="Fonts/R.webp" class="d-block" alt="a" width="1350rem" height="700rem">
         </div>
         <div class="carousel-item">
-          <img src="Fonts/1390723.webp" class="d-block w-100" alt="a" width="1200rem" height="600rem">
+          <img src="Fonts/1390723.webp" class="d-block " alt="a" width="1350rem" height="700rem">
         </div>
       </div>
       <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
