--- a/Ice-Age.html
+++ b/Ice-Age.html
@@ -69,7 +69,7 @@
 
 
     <br>
-    <img src="Fonts/Ice_Age_Logo.webp" alt="a" class="rounded mx-auto d-block img" height="150rem" width="250rem">
+    <img src="Fonts/Ice_Age_Logo.webp" alt="a" class="rounded mx-auto d-block img" height="150" width="250">
     <br>
 
 
@@ -163,13 +163,13 @@
       <div class="carousel-inner">
         <div class="carousel-item active">
 
-          <img src="Fonts/412210.webp" class="d-block" alt="a" width="1350" height="700rem">
+          <img src="Fonts/412210.webp" class="d-block" alt="a" width="1350" height="700">
         </div>
         <div class="carousel-item">
-          <img src="Fonts/R.webp" class="d-block" alt="a" width="1350rem" height="700rem">
+          <img src="Fonts/R.webp" class="d-block" alt="a" width="1350" height="700">
         </div>
         <div class="carousel-item">
-          <img src="Fonts/1390723.webp" class="d-block " alt="a" width="1350rem" height="700rem">
+          <img src="Fonts/1390723.webp" class="d-block " alt="a" width="1350" height="700">
         </div>
       </div>
       <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
@@ -189,7 +189,7 @@
 
     <div id="2">
       <div class="card mb-3">
-        <img src="Fonts/Ice-Age-Movies1-658x658.webp" class="card-img-top" alt="..." width="200rem" height="400rem">
+        <img src="Fonts/Ice-Age-Movies1-658x658.webp" class="card-img-top" alt="..." width="200" height="400">
         <div class="card-body">
           <h5 class="card-title">Social Media/Newsletter</h5>
           <p class="card-text">
