--- a/Ice-Age-Tiere.html
+++ b/Ice-Age-Tiere.html
@@ -6,7 +6,7 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
   integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
   crossorigin="anonymous"></script>   
-<link href="Ice Age.css" rel="stylesheet" />    
+<link href="Ice-Age.css" rel="stylesheet" />    
 <title>Tiere</title>
 <link rel="javascript" type="text/css" href="Ice Age.javascript.js" />
 </head>
@@ -75,14 +75,14 @@
           </div>
         </div></div>
       <div class="col"> <div class="card" style="width: 18rem;">
-        <img src="Fonts/Ice Age 3.webp" class="card-img-top" alt="..." width="500" height="275">
+        <img src="Fonts/Ice Age 3.webp" class="card-img-top" alt="..." width="500rem" height="275rem">
         <div class="card-body">
           <a class="btn btn-outline-primary" href="Scrat.html" role="button">Scrat</a>
           <p class="card-text">A frantic acorn-obsessed saber-toothed squirrel whose persistent pursuit of his acorn has comical yet often world-altering consequences.</p>
         </div>
       </div></div>
       <div class="col"><div class="card" style="width: 18rem;">
-        <img src="Fonts/Ice Age 4.webp" class="card-img-top" alt="..." height="275">
+        <img src="Fonts/Ice Age 4.webp" class="card-img-top" alt="..." height="275rem">
         <div class="card-body">
           <a class="btn btn-outline-primary" href="Diego.html" role="button">Diego</a>
           <p class="card-text">A cunning and agile smilodon (saber-toothed tiger) who initially joins the herd with ulterior motives but eventually becomes a loyal friend.</p>
