--- a/Ice-Age.html
+++ b/Ice-Age.html
@@ -8,9 +8,9 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
     crossorigin="anonymous"></script>
-  <link href="Ice Age.css" rel="stylesheet"/>
+  <link href="Ice-Age.css" rel="stylesheet"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
- <link rel="javascript" type="text/css" href="Ice Age.javascript.js">
+ 
   <title>HomePage</title>
 </head>
 
