--- a/Ice-Age.html
+++ b/Ice-Age.html
@@ -28,20 +28,20 @@
 
     <div class="collapse" id="navbarToggleExternalContent">
       <div class="bg-dark p-4">
-        <h5 class="text-white h4">
+        <div class="text-white h4">
 
-          <li>
+          <ul>
             <br>
             <ul><a class="btn btn-outline-info" href="Ice-Age-Tiere.html" role="button">Tierarten</a></ul>
             <br>
             <ul><a class="btn btn-outline-info" href="Ice-Age-Shop.html" role="button">Shop</a></ul>
             <br>
             <ul><a class="btn btn-outline-info" href="Ice-Age-Kontakt.html" role="button">Kontakt</a></ul>
-          </li>
+          </ul>
 
 
 
-        </h5>
+        </div>
         <span class="text-muted">Toggleable via the navbar brand.</span>
       </div>
     </div>
