--- a/Ice-Age.html
+++ b/Ice-Age.html
@@ -28,20 +28,13 @@
 
     <div class="collapse" id="navbarToggleExternalContent">
       <div class="bg-dark p-4">
-        <div class="text-white h4">
+        <h5 class="text-white h4">
 
-          <ul>
-            <br>
-            <ul><a class="btn btn-outline-info" href="Ice-Age-Tiere.html" role="button">Tierarten</a></ul>
-            <br>
-            <ul><a class="btn btn-outline-info" href="Ice-Age-Shop.html" role="button">Shop</a></ul>
-            <br>
-            <ul><a class="btn btn-outline-info" href="Ice-Age-Kontakt.html" role="button">Kontakt</a></ul>
-          </ul>
+       
 
 
 
-        </div>
+        </h5>
         <span class="text-muted">Toggleable via the navbar brand.</span>
       </div>
     </div>
